<resources>
    <string name="app_name">Medmedes</string>

    <string name="title_activity_glucose_history">Glucose History</string>
    <string name="title_activity_mremind">Medicine Reminders</string>
    <string name="title_activity_new_reminder">New Reminder</string>

    <string name="welcome_message">Welcome %1$s!\nHow are you today?</string>
    <string name="welcome_default">Welcome! How are you today?</string>

    <string name="uname_warning">You must enter a username.</string>
    <string name="email_warning">You must enter an email address.</string>
    <string name="pass_warning">You must enter a password of at least 6 characters.</string>
    <string name="pass_match_warning">Passwords must be the same.</string>

    <string name="account_creation_msg">Welcome to Medmedes. Please create an account below.</string>
    <string name="account_creation_uname">Name:</string>
    <string name="account_creation_email">Email:</string>
    <string name="account_creation_password">Password:</string>
    <string name="account_creation_pass_confirm">Confirm Password:</string>
    <string name="account_creation_submit_button">Create Account</string>
    <string name="account_creation_known_account">Already have an account? Log in here.</string>
    <string name="account_creation_known_msg">Welcome back to Medmedes. Please log in below.</string>
    <string name="account_creation_known_submit_button">Login</string>
    <string name="account_creation_known_fail_title">Login failed.</string>
    <string name="account_creation_known_fail">Please recheck your credentials.</string>

    <string name="main_current_glucose">Current Glucose: </string>
    <string name="main_btn_submit">Submit Glucose</string>
    <string name="main_average">This month\'s average: </string>
    <string name="main_average_default">No data</string>
    <string name="main_dg_title">Dangerously High Glucose</string>
    <string name="main_dangerous_glucose">"Your glucose is dangerously high! Be careful."</string>
    <string name="main_hg_title">High Glucose</string>
    <string name="main_high_glucose">Your glucose seems high, but it\'s a normal level if you\'ve eaten recently.</string>
    <string name="main_lg_title">Low Glucose</string>
    <string name="main_low_glucose">Your glucose is abnormally low! Be careful.</string>
    <string name="main_gg_title">Good job!</string>
    <string name="main_normal_glucose">Your glucose is normal. Congrats!</string>
    <string name="main_logout">Not you? Logout</string>

    <string name="mremind_header">Current Reminders:</string>

    <string name="newremind_instruction_text">Type the medicine name below, and then press the \'ADD REMINDER\' button to add a reminder: </string>
    <string name="newremind_submit">Add reminder</string>
    <string name="newremind_alarm_title">Set Alarm Time</string>

    <string name="ghist_date">Date</string>
    <string name="ghist_level">Level</string>
</resources>
