<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.spec.medmedes3.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!--welcome message-->
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_default"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <!--current glucose-->
        <TextView
            android:id="@+id/tv_current"
            android:labelFor="@+id/et_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_current_glucose"
            android:textSize="25sp"
            android:layout_marginTop="30sp"
            android:layout_below="@id/welcome"/>

        <EditText
            android:id="@+id/et_current"
            android:inputType="number"
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_alignBaseline="@id/tv_current"
            android:layout_toEndOf="@id/tv_current"/>

        <!--button to submit glucose-->
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_submit"
            android:layout_below="@id/tv_current"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:onClick="Submit" />

        <!--show average-->
        <TextView
            android:id="@+id/tv_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_average"
            android:textSize="25sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/btn_submit"/>

        <TextView
            android:id="@+id/tv_avg_num"
            android:layout_width="wrap_content"
            android:text="@string/main_average_default"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_current"
            android:layout_alignBaseline="@id/tv_avg"
            android:layout_toEndOf="@id/tv_avg"/>

        <!--horizontal layout to hold buttons-->
        <LinearLayout
            android:id="@+id/buttons"
            android:layout_below="@id/tv_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <!--glucose history button-->
            <Button
                android:id="@+id/btn_GHist"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/title_activity_glucose_history"
                android:textSize="20sp"
                android:onClick="GHist"/>

            <!--medicine reminder button-->
            <Button
                android:id="@+id/btn_meds"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_mremind"
                android:textSize="20sp"
                android:onClick="MRemind"/>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:onClick="Logout"
            android:text="@string/main_logout"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>
