<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.spec.medmedes3.AccountCreation">

    <!--header for the name-->
    <TextView
        android:id="@+id/acct_header"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"/>


    <!--scrollview in case info gets long and/or keyboard covers things-->
    <ScrollView
        android:id="@+id/acct_scroll"
        android:layout_below="@id/acct_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--relative layout to hold our content-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <!--basic welcome message. information/warnings about attempted creation will appear here-->
            <TextView
                android:id="@+id/welcome"
                android:text="@string/account_creation_msg"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!-- USERNAME TextView & EditText -->
            <TextView
                android:id="@+id/tv_UserName"
                android:labelFor="@+id/et_UserName"
                android:layout_below="@id/welcome"
                android:text="@string/account_creation_uname"
                android:textSize="24sp"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_UserName"
                android:layout_alignBaseline="@+id/tv_UserName"
                android:layout_alignBottom="@+id/tv_UserName"
                android:ems="10"
                android:inputType="textPersonName" />

            <!-- PASSWORD will not be used for now, but will look nice for UI reasons
            and could be added later.-->
            <!-- PASSWORD TextViews & EditText -->
            <TextView
                android:id="@+id/tv_Password"
                android:labelFor="@+id/et_Password"
                android:layout_below="@id/tv_UserName"
                android:text="@string/account_creation_password"
                android:textSize="24sp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_Password"
                android:layout_alignBaseline="@+id/tv_Password"
                android:layout_alignBottom="@+id/tv_Password"
                android:ems="10"
                android:inputType="textPassword" />

            <!--TODO: replace with dialog in order to make UI cleaner?-->
            <!-- PASSWORD2 TextViews & EditText-->
            <TextView
                android:id="@+id/tv_Password2"
                android:labelFor="@+id/et_Password2"
                android:layout_below="@id/tv_Password"
                android:text="@string/account_creation_pass_confirm"
                android:textSize="24sp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_Password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_Password2"
                android:layout_alignBaseline="@+id/tv_Password2"
                android:layout_alignBottom="@+id/tv_Password2"
                android:ems="10"
                android:inputType="textPassword" />


            <!--Button for creating account-->
            <Button
                android:id="@+id/btn_make_request"
                android:layout_below="@id/tv_Password2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/account_creation_submit_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:textSize="15sp"
                android:onClick="CreateAccount"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_make_request"
                android:onClick="KnownAccount"
                android:text="@string/account_creation_known_account"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
